manifests/auth/Service-authelia.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: authelia
  namespace: auth-system
spec:
  ports:
    - name: http
      port: 9091
      targetPort: 9091
  selector:
    app.kubernetes.io/name: authelia
