manifests/auth/Service-caddy.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: auth-system
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: caddy
