manifests/auth/HTTPRoute-ldap-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ldap-sfdr-me
  namespace: network
spec:
  hostnames:
    - ldap.sfdr.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sfdr-me
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lldap
          namespace: auth-system
          port: 17170
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
